- Improved: Variant products don't show select menus with only one option
- Improved: Cart module now hides button withouth a target page (jump to cart/checkout)
- Improved: Added check if form ID exists in IsotopeProduct javascript class
- Improved: Added name attribute with random value to product variant forms to prevent firefox from preserving selection on reload
- Fixed: cart_html and cart_text now include subtotal, surcharges and grand total (Ticket #34)
- Fixed: Variant price should not show "From" when all variants have the same price
- Fixed: Now using core widget TimePeriod for shipping weight which has a larger select menu.
- Fixed: Printing order PDF throwed an exception
- Fixed: Use first available product type if no default/fallback is set
- Fixed: Problem with standardize function and wrong image folder (Ticket #201)
- Fixed: Incorrect reference to bcc property of a mailing object (Ticket #206)
- Fixed: All variant attributes are now mandatory
- Fixed: Phone number not filled in PayPal Standard (Ticket #171)
- Fixed: Line breaks in teaser did not work (Ticket #198)
- Fixed: tl_iso_addressbook.email is no longer mandatory (Ticket #174)
- Fixed: Removed redirect page from address book module setting (Ticket #174)
- Fixed: IsotopeProduct no longer shows attributes not available in product type
- Fixed: Cart insert tags did not work
- Fixed: Wrong check for existing attribute (Ticket #218)
- Fixed: Updated address formats for Contao 2.9 (especially Great Britain)
- Fixed: Address was not checked when forwarding in checkout module
- Fixed: Disable grouping in mail template languages
- Fixed: mod_iso_productlist template contained a CSS ID instead of a class

Version 0.2.beta1 (2010-08-25)
------------------------------
- Introducing IsotopeProductCollection, abstracting a collection of products (eg. cart, order, wishlist)
- Introducing IsotopeGallery class for creating custom image galleries